# zenith

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  install.sh
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bench-results/: LEADERBOARD.md  baseline.json  brainstore_compare.md  brainstore_compare.py  comparison.md  comparison_1m.md  comparison_bench.py  comparison_bench_1m.py  comparison_ch_server.py  setup_multi_segment.sh
bench-results/per-crate/: zen_common.md  zen_compress.md  zen_format.md  zen_index.md
benchmarks/: README.md  bench_1b.sh
crates/zen_auth/: Cargo.toml
crates/zen_auth/src/: claims.rs  hmac_auth.rs  jwt.rs  lib.rs
crates/zen_auth/src/test_data/: jwks.json  rsa_pkcs8.pem
crates/zen_bench/: Cargo.toml
crates/zen_bench/src/: leaderboard.rs  lib.rs  load.rs  run.rs  workload.rs
crates/zen_catalog/: Cargo.toml
crates/zen_catalog/migrations/postgres/: 0001_initial_schema.sql  0002_nodes_registry.sql  0003_wal_pruning_metadata.sql
crates/zen_catalog/migrations/sqlite/: 0001_initial_schema.sql  0002_nodes_registry.sql
crates/zen_catalog/src/: lib.rs  mock.rs  model.rs  postgres.rs  sqlite.rs
crates/zen_cli/: Cargo.toml
crates/zen_cli/src/: main.rs  zenithdb.rs
crates/zen_cluster/: Cargo.toml
crates/zen_cluster/src/: lib.rs  merge.rs  node.rs  registry.rs  remote.rs  router.rs  shard.rs
crates/zen_common/: Cargo.toml
crates/zen_common/benches/: common_bench.rs
crates/zen_common/src/: config.rs  errors.rs  lib.rs  schema.rs  time.rs  types.rs
crates/zen_compactor/: Cargo.toml
crates/zen_compactor/src/: build.rs  lib.rs  merge.rs  runner.rs
crates/zen_compress/: Cargo.toml
crates/zen_compress/benches/: compress_bench.rs
crates/zen_compress/src/: dict.rs  for_bitpack.rs  fsst.rs  gorilla.rs  lib.rs  rle.rs  zstd_page.rs
crates/zen_crypto/: Cargo.toml
crates/zen_crypto/src/: envelope.rs  lib.rs  root.rs
crates/zen_format/: Cargo.toml
crates/zen_format/benches/: format_bench.rs
crates/zen_format/src/: footer.rs  hotcache.rs  lib.rs  magic.rs  meta.rs  page.rs  reader.rs  row_group.rs  writer.rs
crates/zen_fts/: Cargo.toml
crates/zen_fts/src/: build.rs  lib.rs  query.rs
crates/zen_index/: Cargo.toml
crates/zen_index/benches/: index_bench.rs
crates/zen_index/src/: bloom.rs  lib.rs  posting.rs  sparse.rs  zone_map.rs
crates/zen_jsonpath/: Cargo.toml
crates/zen_jsonpath/src/: discovery.rs  index.rs  lib.rs  scan.rs
crates/zen_memtable/: Cargo.toml
crates/zen_memtable/src/: arrow_schema.rs  builder.rs  flush.rs  lib.rs
crates/zen_proto/: Cargo.toml  build.rs
crates/zen_proto/src/: lib.rs
crates/zen_ql/: Cargo.toml
crates/zen_ql/src/: lib.rs  sql.rs
crates/zen_query/: Cargo.toml
crates/zen_query/src/: cache.rs  executor.rs  expr.rs  lib.rs  logical.rs  physical.rs  row.rs  segment_cache.rs  segment_list_cache.rs
crates/zen_server/: Cargo.toml
crates/zen_server/src/: admin.rs  grpc.rs  http.rs  ingest.rs  internal_query.rs  lib.rs  metrics.rs  openapi.rs  otlp.rs  query_handler.rs  state.rs
crates/zen_server/src/middleware/: auth.rs  limits.rs  mod.rs  tenant_check.rs
crates/zen_storage/: Cargo.toml
crates/zen_storage/src/: cache.rs  coalesce.rs  encrypting.rs  group_commit.rs  lib.rs  local_fs.rs  store.rs
crates/zen_vector/: Cargo.toml
crates/zen_vector/src/: build.rs  lib.rs  query.rs
crates/zen_wal/: Cargo.toml
crates/zen_wal/src/: format.rs  lib.rs  reader.rs  writer.rs
deploy/docker/: Dockerfile.zenithdb  docker-compose.dev.yml
deploy/helm/zenithdb/: Chart.yaml  values.yaml
deploy/helm/zenithdb/templates/: deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  serviceaccount.yaml
deploy/terraform/aws/: main.tf
docs/: ARCHITECTURE.md  RUNBOOK.md  SCALING_1TB_1PB.md
examples/: python_quickstart.py  typescript_quickstart.ts  zenithdb.dev.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_segment_parse.rs  fuzz_wal_parse.rs  fuzz_zenithql_parse.rs
proto/zen/: query.proto  span.proto
tests/chaos/: Cargo.toml  corrupt_segment.rs  disk_full.rs  kill_writer.rs
tests/integration/: Cargo.toml  auth.rs  backup_restore.rs  durability_bench.rs  end_to_end.rs  metrics_smoke.rs  multi_node.rs  multi_tenant_isolation.rs  openapi_smoke.rs  postgres_catalog.rs  tls.rs
tests/integration/test_data/: localhost-cert.pem  localhost-key.pem
tests/perf/: Cargo.toml  naive_reference.rs
web/: .env.example  .gitignore  README.md  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/app/(dashboard)/: layout.tsx  page.tsx
web/app/(dashboard)/compactions/: page.tsx  trigger.tsx
web/app/(dashboard)/metrics/: page.tsx
web/app/(dashboard)/queries/: page.tsx  runner.tsx
web/app/(dashboard)/segments/: page.tsx
web/app/(dashboard)/settings/: page.tsx
web/app/(dashboard)/tenants/: page.tsx
web/app/(dashboard)/wal/: page.tsx
web/app/api/compact/: route.ts
web/app/api/query/: route.ts
web/app/components/: dashboard.tsx  format.tsx  icons.tsx  nav.tsx  refresher.tsx  ui.tsx
web/lib/: zenith.ts
