[package]
name = "zen_catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zen_common = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "catalog_bench"
harness = false
