[package]
name = "zen_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zen"
path = "src/main.rs"

[[bin]]
name = "zenithdb"
path = "src/zenithdb.rs"

[dependencies]
zen_common = { workspace = true }
zen_server = { workspace = true }
zen_bench = { workspace = true }
zen_storage = { workspace = true }
zen_catalog = { workspace = true }
zen_format = { workspace = true }
zen_compactor = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
