[package]
name = "zen_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
arrow-schema = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "common_bench"
harness = false
