[package]
name = "zen_compactor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zen_common = { workspace = true }
zen_format = { workspace = true }
zen_storage = { workspace = true }
zen_wal = { workspace = true }
zen_catalog = { workspace = true }
zen_index = { workspace = true }
zen_fts = { workspace = true }
zen_jsonpath = { workspace = true }
zen_vector = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
zen_memtable = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "compactor_bench"
harness = false
