[package]
name = "zen_proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
