[package]
name = "zen_storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zen_common = { workspace = true }
object_store = { workspace = true }
moka = { workspace = true }
parking_lot = "0.12"
zen_crypto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
